js/js.translator/testData/incremental/invalidationWithPL/moveSuspendFunctionBetweenModules/lib1/l1.0.kt
package sample

suspend fun foo(): Int = 0
